...
    android:layout_height="wrap_content"
    android:layout_centerInParent="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraint"
        app:layout_constraintDimensionRatio="w,1:1">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
...
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@null"
            android:onClick="onClickCenter"
            android:text="Center"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mock_degrees"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map" />
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mock_button"
            app:layout_constraintStart_toEndOf="@+id/center"
            app:layout_constraintTop_toBottomOf="@+id/map" />

        <Button
            android:id="@+id/addLocation"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="-"
            android:background="@drawable/baseline_add_box_24"
            app:layout_constraintBottom_toTopOf="@+id/map"
            app:layout_constraintEnd_toEndOf="parent"
...
